# notebook

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
notebooks/dsa/: 00_introduction.ipynb  01_principles-of-algorithm-desing.ipynb  02_lists-and-pointer-structures.ipynb  03_stacks-and-queues.ipynb
notes/ai-prompts/: linux-mentorship.md  unbiased.md
notes/fundamentals/: regex.md
notes/lpic1/: 000-0.md  101-1.md  101-2.md  101-3.md  102-1.md  102-2.md  102-3.md  102-4.md  102-5.md  102-6.md  103-1.md  103-2.md  103-4.md  103-5.md  103-6.md  103-7.md  103-8.md  104-1.md  130-3.md
notes/system-setup/: ubuntu22.md
notes/system-setup/editors/: keybindings.json  settings.json  vscode.md
scripts/: format.sh
