[project]
name = "notebook"
version = "1.0.0"
description = "A personal space for structured learning."
authors = [
    {name = "ali",email = "alihezarpisheh@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mdformat-pyproject>=0.1.1",
    "mdformat-toc>=0.5.0",
    "mypy>=1.19.1",
    "numpy>=2.3.5",
    "pre-commit>=4.5.0",
    "ruff>=0.14.10",
]


[tool.mdformat]
wrap = 88  # Wrap lines at 88th character
number = true  # Format numbered lists (1. 1. 1.)
end_of_line = "lf"  # Standard across repos
validate = true  # Make mdformat fail in CI if something is off
exclude = [
    "node_modules/**",
    ".venv/**",
]

extensions = [
    "gfm",  # GitHub-Flavored Markdown
    "toc",  # Generates/fixes Table of Contents
]


[tool.ruff]
line-length = 88
lint.select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "C90",  # mccabe
    "D",  # pydocstyle
    "I",  # isort
    "RUF",  # Ruff specific rules
]
lint.ignore = ["D104"]
lint.exclude = ["*/alembic/*"]

lint.fixable = [
    "F401",  # Remove unused imports.
    "RUF100",  # Remove unused noqa comments.
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true


[tool.mypy]
strict = true
ignore_missing_imports = true
